--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -22,4 +22,4 @@ COPY alembic.ini .
 EXPOSE 8000
 
 # Start server
-CMD sh -c "uvicorn backend.main:app --host 0.0.0.0 --port 8000"
+CMD sh -c "alembic upgrade head && uvicorn backend.main:app --host 0.0.0.0 --port 8000"
