--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -5,6 +5,10 @@ FROM node:18-alpine as builder
 
 WORKDIR /app
 
+# Accept build arguments
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Copy package files
 COPY frontend/package*.json ./
 
