update actions and gitignore

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -81,7 +81,7 @@ jobs:
           MODAL_TOKEN_SECRET: ${{ secrets.MODAL_TOKEN_SECRET }}
         run: |
           echo "Testing Modal sandbox executor..."
-          pytest backend/modal_runtime/tests/test_sandbox.py -v --tb=short
+          pytest backend/modal_runtime/tests/test_sandbox.py -v --tb=short -s
       
       - name: Test sandbox tools (integration tests with executor.execute)
         env:
